force-app/main/default/objects/Lead/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>field to register the company code of the lead</description>
    <label>OMV Entity</label>
    <referenceTo>CompanyCode__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>