force-app/main/default/objects/Lead/fields/ConfirmYouCalledTheContact__c.field-meta.xml
<CustomField>
    <fullName>ConfirmYouCalledTheContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to confirm if the user contacted the Contact asking for GDPR consent</description>
    <label>Verbal Consent Obtained</label>
    <type>Checkbox</type>
</CustomField>