force-app/main/default/objects/Lead/fields/GeneralGDPR__c.field-meta.xml
<CustomField>
    <fullName>GeneralGDPR__c</fullName>
    <description>Field to register GDPR consent</description>
    <label>General GDPR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>