force-app/main/default/objects/Lead/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Type the job title of the primary contact for this lead to make sure the prospect is addressed correctly in sales calls, email, and marketing campaigns.</description>
    <label>Job Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>