force-app/main/default/objects/Lead/fields/Last_Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Date__c</fullName>
    <description>Shows the date when the lead was last included in a marketing campaign or quick campaign.</description>
    <label>Last Campaign Date</label>
    <type>DateTime</type>
</CustomField>