force-app/main/default/objects/Lead/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <description>This flag says for which business segment the lead belongs to</description>
    <label>Lead Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Cards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>