force-app/main/default/objects/Lead/fields/Marketing_Material__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Material__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Select whether the lead accepts marketing materials, such as brochures or catalogs. Leads that opt out can be excluded from marketing initiatives.</description>
    <label>Marketing Material</label>
    <type>Checkbox</type>
</CustomField>