force-app/main/default/objects/Lead/fields/OwnerRole__c.field-meta.xml
<CustomField>
    <fullName>OwnerRole__c</fullName>
    <description>field used for sharing rules</description>
    <label>Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>