force-app/main/default/objects/Lead/fields/Potential_Diesel_volume_kL_y__c.field-meta.xml
<CustomField>
    <fullName>Potential_Diesel_volume_kL_y__c</fullName>
    <description>Qualification criteria for Leads: a minimum volume of diesel or gasoline should be inserted by CARD sales persons.</description>
    <label>Potential Diesel volume [kL/y]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>