force-app/main/default/objects/Lead/fields/Potential_Gasoline_volume_kL_y__c.field-meta.xml
<CustomField>
    <fullName>Potential_Gasoline_volume_kL_y__c</fullName>
    <description>Qualification criteria for lead a minimum volume of diesel or gasoline should be inserted by CARD sales persons.</description>
    <label>Potential Gasoline volume [kL/y]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>