force-app/main/default/objects/Lead/fields/PreferredMethodofContact__c.field-meta.xml
<CustomField>
    <fullName>PreferredMethodofContact__c</fullName>
    <description>Field to Identify preferred method of contact</description>
    <label>Preferred Method of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>E-mail and Phone</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>