force-app/main/default/objects/Lead/fields/Source_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Source_Campaign__c</fullName>
    <description>Describe the campaign that the lead was generated from to track the effectiveness of marketing campaigns and identify communications received by the lead.</description>
    <label>Source Campaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>