force-app/main/default/objects/Lead/fields/Total_Potential_Fuel_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Potential_Fuel_Volume__c</fullName>
    <description>This filed is read-only. The value is a sum of potential diesel and gasoline volumes, which will be automatically calculated as the value changes in those fields.</description>
    <formula>Potential_Diesel_volume_kL_y__c +  Potential_Gasoline_volume_kL_y__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Potential Fuel Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>