force-app/main/default/objects/Lead/recordTypes/CEP_Cards_Database_Lead.recordType-meta.xml
<RecordType>
    <fullName>CEP_Cards_Database_Lead</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <description>Record type for importing leads</description>
    <label>CEP Cards Database Lead</label>
</RecordType>