force-app/main/default/objects/Lead/recordTypes/CEP_Cards_Lead.recordType-meta.xml
<RecordType>
    <fullName>CEP_Cards_Lead</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>CEP Cards Lead</label>
</RecordType>