force-app/main/default/objects/Lead/recordTypes/FPS_Bor_Lead.recordType-meta.xml
<RecordType>
    <fullName>FPS_Bor_Lead</fullName>
    <active>true</active>
    <businessProcess>FPS Bor Lead Process</businessProcess>
    <description>Lead record type that targets FPS Borealis POC Leads</description>
    <label>FPS Bor Lead</label>
</RecordType>