force-app/main/default/objects/Lead/validationRules/CantEditWhenGDPRNo.validationRule-meta.xml
<ValidationRule>
    <fullName>CantEditWhenGDPRNo</fullName>
    <active>true</active>
    <description>prevent editing when gdpr picklist is no</description>
    <errorConditionFormula>NOT($Setup.CEPSkipValidationRules__c.Lead__c) &amp;&amp; 
((TEXT(GeneralGDPR__c) = &apos;No&apos; &amp;&amp;  
TEXT(PRIORVALUE(GeneralGDPR__c)) = &apos;No&apos;) || 
TEXT(PRIORVALUE(GeneralGDPR__c)) = &apos;No&apos;)</errorConditionFormula>
    <errorMessage>This Lead has no General GDPR consent and can&apos;t be edited. The information will be deleted.</errorMessage>
</ValidationRule>