force-app/main/default/objects/Lead/validationRules/Email_Or_Phone_Mandatory_to_Qualify.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Or_Phone_Mandatory_to_Qualify</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.CEPSkipValidationRules__c.Lead__c),
 RecordType.DeveloperName != &quot;DatabaseInfoLead&quot;,
    ISBLANK(Phone), ISBLANK(Email),  
				NOT(ISPICKVAL(PRIORVALUE(Status), &apos;Qualified&apos;)), 
				ISPICKVAL(Status,&apos;Qualified&apos;) )</errorConditionFormula>
    <errorMessage>Please provide Business Phone Contact and/or E-mail</errorMessage>
</ValidationRule>