force-app/main/default/objects/Lead/listViews/FBAM_team_Lead.listView-meta.xml
<ListView>
    <fullName>FBAM_team_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>FBAM team</label>
    <queue>FBAM_team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>