force-app/main/default/objects/Lead/listViews/MyOpenLeads.listView-meta.xml
<ListView>
    <fullName>MyOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Total_Potential_Fuel_Volume__c</columns>
    <columns>TradeRegistrationNumber__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Working</value>
    </filters>
    <label>My open leads</label>
</ListView>