force-app/main/default/objects/Lead/listViews/OBAM_team_Lead.listView-meta.xml
<ListView>
    <fullName>OBAM_team_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>OBAM team</label>
    <queue>OBAM_team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>