force-app/main/default/objects/Lead/listViews/Tender_Lead.listView-meta.xml
<ListView>
    <fullName>Tender_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Tender</label>
    <queue>Tender</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>