force-app/main/default/objects/Lead/listViews/test_Lead.listView-meta.xml
<ListView>
    <fullName>test_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>test</label>
    <queue>test</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>